syntax = "proto3";

import "google/protobuf/timestamp.proto";


package io.codewithwinnie.shopping.stubs.order;
option java_package = "io.codewithwinnie.shopping.stubs.order";
option java_multiple_files = true;


service  OrderService {
  rpc getOrderForUser(OrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
  int32 userId = 1;
}

message OrderResponse {
  repeated Order order = 1;
}

message Order {
  int32 userId = 1;
  int32 id = 2;
  int32 numberOfItems = 3;
  double totalAmount = 4;
  google.protobuf.Timestamp orderDate = 5;
}